@@ -1,0 +1,15 @@
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Shoutbox</title>
+    </head>
+    <body style="background: #000;">
+        <script>
+            document.write('<div id="yourshoutbox_img103262550" style="overflow: hidden; padding: 0;">');
+            document.write('<div id="yourshoutbox103262550" style="overflow: hidden; padding: 0; border:0;">');
+            document.write('<iframe src="http://www4.yourshoutbox.com/shoutbox/sb.php?key=103262550" scrolling="yes" frameborder="0" width="320px" height="480px" style="border:0; margin:10px; padding: 0;">');
+            document.write('</iframe></div></div>');
+        </script>
+    </body>
+</html>
